--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <!-- Basic SEO -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musa Godfrey</title>
+    <meta name="description" content="Musa Godfrey - Personal profile website showcasing creative work, favorite media, gallery, and social links.">
+    <meta name="keywords" content="Musa Godfrey, personal website, portfolio, gallery, TV series, music, social media, creative profile">
+    <meta name="author" content="Musa Godfrey">
+    <title>Musa Godfrey | Personal Profile</title>
 
-    <!-- Icons -->
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Musa Godfrey - Personal Profile">
+    <meta property="og:description" content="Explore Musa Godfrey's personal website: gallery, favorite TV series, music, and social links.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://musagodfrey.github.io">
+    <meta property="og:image" content="https://musagodfrey.github.io/img/top.jpg">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Musa Godfrey - Personal Profile">
+    <meta name="twitter:description" content="Explore Musa Godfrey's personal website: gallery, favorite TV series, music, and social links.">
+    <meta name="twitter:image" content="https://musagodfrey.github.io/img/top.jpg">
+
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicons/site.webmanifest">
+    <link rel="manifest" href="/favicon/site.webmanifest">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
