--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
                 <h1 class="profile-name">Musa Godfrey</h1>
                 <p class="profile-title">Creative • Developer • Designer</p>
                 <p class="profile-summary">
-                    I like keeping things simple, clean and real. I enjoy building digital spaces that feel personal and calm,
-                    mixing code, design and a bit of mood. Most of the time you will find me listening to music,
-                    tweaking layouts or scrolling in peace.
+                   I like keeping things simple and calm, building digital spaces in my quiet corner. I’m shy, and I panic when code decides to embarrass me for no reason. Most of the time I’m listening to music or binge-watching TV series and reality shows instead of dealing with bugs.
+                   I don’t talk much, but trust me — in my head I’m having full arguments with code that refuses to behave.
                 </p>
             </div>
         </header>
@@ -74,7 +73,7 @@
             <div class="highlights-grid">
                 <div class="highlight-card">
                     <p class="highlight-label">Based In</p>
-                    <p class="highlight-value">South Africa</p>
+                    <p class="highlight-value">–25.0333°, 31.1167°</p>
                 </div>
                 <div class="highlight-card">
                     <p class="highlight-label">Vibe</p>
@@ -247,6 +246,18 @@
             </div>
         </section>
 
+        <section class="section reveal">
+            <div class="section-header">
+                <h2 class="section-title">
+                    <i class="fa-solid fa-star"></i> Last but not least
+                </h2>
+
+                <div class="divider"></div>
+            </div>
+
+            <p>If it’s urgent and important, please send me an email—otherwise, just know I’m probably busy listening to music, binge-watching TV series, or quietly arguing with my code.</p>
+        </section>
+
         <div id="lightbox">
             <span id="close-lightbox">&times;</span>
             <img id="lightbox-img" src="">
@@ -254,7 +265,7 @@
 
         <!-- FOOTER -->
         <footer class="reveal">
-            <p>take your time...</p>
+            <p>take your time but don’t waste it...</p>
             <div class="footer-links">
                 <!-- Replace with your actual GitHub profile -->
                 <a href="https://github.com/musagodfrey/musagodfrey.github.io" class="footer-link">
