--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <div class="divider"></div>
             </div>
 
-            <p>If it’s urgent and important, please send me an email—otherwise, just know I’m probably busy listening to music, binge-watching TV series, or quietly arguing with my code.</p>
+            <p>If it’s urgent and important, please send me an email—otherwise, just know I’m probably busy doing nothing.</p>
         </section>
 
         <div id="lightbox">
@@ -322,3 +322,4 @@
     </script>
 </body>
 </html>
+
