--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="highlight-card">
                     <p class="highlight-label">Languages</p>
-                    <p class="highlight-value">English, Swati + more</p>
+                    <p class="highlight-value">Multilingual</p>
                 </div>
                 <div class="highlight-card">
                     <p class="highlight-label">Currently</p>
@@ -322,4 +322,5 @@
     </script>
 </body>
 </html>
+
 
