--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <section class="section reveal">
             <div class="section-header">
                 <h2 class="section-title">
-                    <i class="fa-regular fa-compass"></i> Social Media
+                    <i class="fa-regular fa-compass"></i>Connect
                     <span>Places you might run into me</span>
                 </h2>
                 <div class="divider"></div>
@@ -322,5 +322,6 @@
     </script>
 </body>
 </html>
+
 
 
